# joemath

./: .gitignore  CMakeLists.txt  MingwToolchain.cmake  diehardResults  libjoemath.pc.cmake  license.txt  regression_test_data.txt
cmake/: linux32-gcc.cmake  w32-mingw.cmake  w64-mingw.cmake
include/joemath/: config.hpp.in  float2-inl.hpp  float2.hpp  float3-inl.hpp  float3.hpp  float4-inl.hpp  float4.hpp  float_util-inl.hpp  float_util.hpp  int_util-inl.hpp  int_util.hpp  joemath.hpp  matrix.hpp  matrix_traits.hpp  random.hpp  scalar-inl.hpp  scalar.hpp  types.hpp  vector.hpp  vector2-inl.hpp  vector2.hpp  vector3-inl.hpp  vector3.hpp  vector4-inl.hpp  vector4.hpp
include/joemath/inl/: matrix-inl.hpp  scalar-inl.hpp  vector-inl.hpp
src/: random.cpp
tests/: CMakeLists.txt  joemath_discover_gtest_tests.cpp  matrix.cpp  scalar.cpp  vector.cpp  vector_instantiation.cpp
tests/regression/: regression.cpp  scalar.cpp  test_data.hpp  vector.cpp
tests/speed_test/: CMakeLists.txt  main.cpp  timer.cpp  timer.hpp
